feat: add-section list-section

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,10 +16,41 @@
 
     </header>
 
-    <main class="container">
-        <section>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam labore omnis, totam eius nemo commodi recusandae, illum culpa veniam facilis obcaecati laudantium dolorem! Nobis beatae magni commodi, incidunt temporibus quos?
+    <main>
+        <!-- add section  -->
+        <section class="container-add section-list add-distance">
+            <span class="tag color-task">
+            Add Task 
+            </span>
+
+            <span class="tag color-add">
+                Add Section
+            </span>
         </section>
+        <!-- end section add  -->
+
+        <!-- section list  -->
+        <section class="section-list container-list list-distance">
+            <ul>
+                New Task
+                <li>Quarterly Newsletter</li>
+            </ul>
+            <ul>
+                Today
+                <li>Recruiting blog post</li>
+                <li>Mobile app luaunch</li>
+                <li>Interview John H.</li>
+                <li>Summit update to mobile storefronts</li>
+            </ul>
+            <ul>
+                Upcoming
+                <li>Schedule meeting with Alex</li>
+                <li>Homepage refresh</li>
+                <li>Onboard new Sales team members</li>
+                <li>Review editorial calendar</li>
+            </ul>
+        </section>
+        <!-- end section list  -->
     </main>
 
     <footer>
@@ -27,4 +59,5 @@
 
 
 </body>
+
 </html>
