feat: add color list

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- add section  -->
         <section class="container-add section-list add-distance">
             <span class="tag color-task">
-            Add Task 
+                Add Task
             </span>
 
             <span class="tag color-add">
@@ -32,22 +32,23 @@
         <!-- section list  -->
         <section class="section-list container-list list-distance">
             <ul>
-                New Task
-                <li>Quarterly Newsletter</li>
+                <strong class="strong-list">New Task</strong>
+                <li>Quarterly Newsletter <span class="editorial-color tag-list">Editorial</span></li>
             </ul>
-            <ul>
-                Today
-                <li>Recruiting blog post</li>
-                <li>Mobile app luaunch</li>
-                <li>Interview John H.</li>
-                <li>Summit update to mobile storefronts</li>
+            <ul class="margine">
+                <strong class="strong-list">Today</strong>
+                <li>Recruiting blog post <span class="editorial-color tag-list">Editorial</span></li>
+                <li>Mobile app luaunch <span class="goals-color tag-list">Q1 Goals</span>
+                </li>
+                <li>Interview John H. <span class="recruting-color tag-list">Recruting</span></li>
+                <li>Summit update to mobile storefronts <span class="tag-list mobile-color">Mobile</span></li>
             </ul>
-            <ul>
-                Upcoming
+            <ul class="margine">
+                <strong class="strong-list">Upcoming</strong>
                 <li>Schedule meeting with Alex</li>
-                <li>Homepage refresh</li>
-                <li>Onboard new Sales team members</li>
-                <li>Review editorial calendar</li>
+                <li>Homepage refresh <span class="website-color tag-list">Website</span></li>
+                <li>Onboard new Sales team members <span class="sales-color tag-list">Sales</span> </li>
+                <li>Review editorial calendar <span class="editorial-color tag-list">Editorial</span></li>
             </ul>
         </section>
         <!-- end section list  -->
