feat: correzione lista finale

--- a/index.html
+++ b/index.html
@@ -32,23 +32,45 @@
         <!-- section list  -->
         <section class="section-list container-list list-distance">
             <ul>
-                <strong class="strong-list">New Task</strong>
-                <li>Quarterly Newsletter <span class="editorial-color tag-list">Editorial</span></li>
-            </ul>
-            <ul class="margine">
-                <strong class="strong-list">Today</strong>
-                <li>Recruiting blog post <span class="editorial-color tag-list">Editorial</span></li>
-                <li>Mobile app luaunch <span class="goals-color tag-list">Q1 Goals</span>
+                <li>
+                    <h3 class="h3-list">New Task</h3>
+
+                    <ul>
+                        <li>
+                            <span> &check; </span> Quarterly Newsletter <span
+                                class="editorial-color tag-list">Editorial</span>
+                        </li>
+                    </ul>
                 </li>
-                <li>Interview John H. <span class="recruting-color tag-list">Recruting</span></li>
-                <li>Summit update to mobile storefronts <span class="tag-list mobile-color">Mobile</span></li>
             </ul>
+
             <ul class="margine">
-                <strong class="strong-list">Upcoming</strong>
-                <li>Schedule meeting with Alex</li>
-                <li>Homepage refresh <span class="website-color tag-list">Website</span></li>
-                <li>Onboard new Sales team members <span class="sales-color tag-list">Sales</span> </li>
-                <li>Review editorial calendar <span class="editorial-color tag-list">Editorial</span></li>
+
+                <li>
+                    <h3 class="h3-list">Today</h3>
+
+
+                    <ul>
+                        <li>Recruiting blog post <span class="editorial-color tag-list">Editorial</span></li>
+                        <li>Mobile app luaunch <span class="goals-color tag-list">Q1 Goals</span></li>
+                        <li>Interview John H. <span class="recruting-color tag-list">Recruting</span></li>
+                        <li>Summit update to mobile storefronts <span class="tag-list mobile-color">Mobile</span></li>
+
+                    </ul>
+                </li>
+            </ul>
+
+            <ul class="margine">
+                <li>
+                    <h3 class="h3-list">Upcoming</h3>
+
+                    <ul>
+                        <li>Schedule meeting with Alex</li>
+                        <li>Homepage refresh <span class="website-color tag-list">Website</span></li>
+                        <li>Onboard new Sales team members <span class="sales-color tag-list">Sales</span> </li>
+                        <li>Review editorial calendar <span class="editorial-color tag-list">Editorial</span></li>
+                    </ul>
+                </li>
             </ul>
         </section>
         <!-- end section list  -->
