--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section class="section-list container-list list-distance">
             <ul>
                 <li>
-                    <h3 class="h3-list">New Task</h3>
+                    <h3 class="h3-list"> &blacktriangledown; New Task</h3>
 
                     <ul>
                         <li>
@@ -47,14 +47,14 @@
             <ul class="margine">
 
                 <li>
-                    <h3 class="h3-list">Today</h3>
+                    <h3 class="h3-list">&blacktriangledown; Today</h3>
 
 
                     <ul>
-                        <li>Recruiting blog post <span class="editorial-color tag-list">Editorial</span></li>
-                        <li>Mobile app luaunch <span class="goals-color tag-list">Q1 Goals</span></li>
-                        <li>Interview John H. <span class="recruting-color tag-list">Recruting</span></li>
-                        <li>Summit update to mobile storefronts <span class="tag-list mobile-color">Mobile</span></li>
+                        <li> &check; Recruiting blog post <span class="editorial-color tag-list">Editorial</span></li>
+                        <li> &check; Mobile app luaunch <span class="goals-color tag-list">Q1 Goals</span></li>
+                        <li> &Chi; Interview John H. <span class="recruting-color tag-list">Recruting</span></li>
+                        <li> &check; Summit update to mobile storefronts <span class="tag-list mobile-color">Mobile</span></li>
 
                     </ul>
                 </li>
@@ -62,13 +62,13 @@
 
             <ul class="margine">
                 <li>
-                    <h3 class="h3-list">Upcoming</h3>
+                    <h3 class="h3-list"> &blacktriangledown; Upcoming</h3>
 
                     <ul>
-                        <li>Schedule meeting with Alex</li>
-                        <li>Homepage refresh <span class="website-color tag-list">Website</span></li>
-                        <li>Onboard new Sales team members <span class="sales-color tag-list">Sales</span> </li>
-                        <li>Review editorial calendar <span class="editorial-color tag-list">Editorial</span></li>
+                        <li> &Chi; Schedule meeting with Alex</li>
+                        <li> &check; Homepage refresh <span class="website-color tag-list">Website</span></li>
+                        <li> &check; Onboard new Sales team members <span class="sales-color tag-list">Sales</span> </li>
+                        <li> &check; Review editorial calendar <span class="editorial-color tag-list">Editorial</span></li>
                     </ul>
                 </li>
             </ul>
