feat: colori simboli

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
                     <ul>
                         <li>
-                            <span> &check; </span> Quarterly Newsletter <span
+                            <span> <span class="green-tag">&check;</span> </span> Quarterly Newsletter <span
                                 class="editorial-color tag-list">Editorial</span>
                         </li>
                     </ul>
@@ -51,10 +51,10 @@
 
 
                     <ul>
-                        <li> &check; Recruiting blog post <span class="editorial-color tag-list">Editorial</span></li>
-                        <li> &check; Mobile app luaunch <span class="goals-color tag-list">Q1 Goals</span></li>
+                        <li> <span class="green-tag">&check;</span> Recruiting blog post <span class="editorial-color tag-list">Editorial</span></li>
+                        <li> <span class="green-tag">&check; </span> Mobile app luaunch <span class="goals-color tag-list">Q1 Goals</span></li>
                         <li> &Chi; Interview John H. <span class="recruting-color tag-list">Recruting</span></li>
-                        <li> &check; Summit update to mobile storefronts <span class="tag-list mobile-color">Mobile</span></li>
+                        <li> <span class="green-tag">&check; </span> Summit update to mobile storefronts <span class="tag-list mobile-color">Mobile</span></li>
 
                     </ul>
                 </li>
@@ -66,9 +66,9 @@
 
                     <ul>
                         <li> &Chi; Schedule meeting with Alex</li>
-                        <li> &check; Homepage refresh <span class="website-color tag-list">Website</span></li>
-                        <li> &check; Onboard new Sales team members <span class="sales-color tag-list">Sales</span> </li>
-                        <li> &check; Review editorial calendar <span class="editorial-color tag-list">Editorial</span></li>
+                        <li> <span class="green-tag">&check;</span> Homepage refresh <span class="website-color tag-list">Website</span></li>
+                        <li> <span class="green-tag">&check;</span> Onboard new Sales team members <span class="sales-color tag-list">Sales</span> </li>
+                        <li> <span class="green-tag">&check;</span> Review editorial calendar <span class="editorial-color tag-list">Editorial</span></li>
                     </ul>
                 </li>
             </ul>
